// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schema domainRoot at child: fooChild_body 1`] = `
"\`\`\`
-
    id: foo.child
    title: foo.child
    desc: \\"\\"
    children: [foo.grandchild]
    parent: foo.root
    data: {}
    fname: foo.child
-
    id: foo.grandchild
    title: foo.grandchild
    desc: \\"\\"
    children: []
    parent: foo.child
    data: {}
    fname: foo.grandchild

\`\`\`"
`;

exports[`schema domainRoot at root: foo_body 1`] = `
"\`\`\`
-
    id: foo.root
    title: foo.root
    desc: \\"\\"
    children: [foo.child]
    parent: root
    data: {}
    fname: foo.root
-
    id: foo.child
    title: foo.child
    desc: \\"\\"
    children: [foo.grandchild]
    parent: foo.root
    data: {}
    fname: foo.child
-
    id: foo.grandchild
    title: foo.grandchild
    desc: \\"\\"
    children: []
    parent: foo.child
    data: {}
    fname: foo.grandchild

\`\`\`"
`;
